<?xml version="1.0"?>
<package format="3">
  <name>sparrow_launch</name>
  <version>0.1.0</version>
  <description>The sparrow_launch package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>roboteq_interface</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
